name:                jsval-json
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bitonic/jsval-json#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2017 Francesco Mazzoli
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    JavaScript.JSValJSON
    JavaScript.JSValJSON.Internal
    JavaScript.JSValJSON.TH
  build-depends:
    base >= 4.7 && < 5,
    ghcjs-base,
    mtl,
    either,
    transformers,
    vector,
    unordered-containers,
    containers,
    text,
    hashable,
    template-haskell,
    time
  default-language: Haskell2010
  ghc-options: -Wall

test-suite jsval-convert-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Spec.TH
  build-depends:
    base,
    jsval-json,
    aeson,
    hspec,
    bytestring,
    QuickCheck,
    ghcjs-base,
    vector,
    quickcheck-instances,
    text,
    unordered-containers,
    template-haskell,
    generic-random,
    containers,
    hashable,
    time
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/bitonic/jsval-json
